VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc16Down.err
[8MB/455.1MB][  1%][>                                                 ][682.7kB/s]  [16MB/455.1MB][  3%][=>                                                ][963.8kB/s]  [24MB/455.1MB][  5%][==>                                               ][1.263MB/s]  [32MB/455.1MB][  7%][===>                                              ][1.524MB/s]  [40MB/455.1MB][  8%][====>                                             ][1.818MB/s]  [48MB/455.1MB][ 10%][=====>                                            ][2.087MB/s]  [56MB/455.1MB][ 12%][======>                                           ][2.333MB/s]  [64MB/455.1MB][ 14%][=======>                                          ][2.56MB/s]  [72MB/455.1MB][ 15%][=======>                                          ][2.769MB/s]  [88MB/455.1MB][ 19%][=========>                                        ][3.143MB/s]  [96MB/455.1MB][ 21%][==========>                                       ][3.31MB/s]  [104MB/455.1MB][ 22%][===========>                                      ][3.467MB/s]  [112MB/455.1MB][ 24%][============>                                     ][3.613MB/s]  [120MB/455.1MB][ 26%][=============>                                    ][3.75MB/s]  [128MB/455.1MB][ 28%][==============>                                   ][3.879MB/s]  [136MB/455.1MB][ 29%][==============>                                   ][4MB/s]  [144MB/455.1MB][ 31%][===============>                                  ][4.114MB/s]  [152MB/455.1MB][ 33%][================>                                 ][4.222MB/s]  [160MB/455.1MB][ 35%][=================>                                ][4.324MB/s]  [168MB/455.1MB][ 36%][==================>                               ][4.421MB/s]  [176MB/455.1MB][ 38%][===================>                              ][4.513MB/s]  [184MB/455.1MB][ 40%][====================>                             ][4.6MB/s]  [192MB/455.1MB][ 42%][=====================>                            ][4.683MB/s]  [200MB/455.1MB][ 43%][=====================>                            ][4.762MB/s]  [208MB/455.1MB][ 45%][======================>                           ][4.837MB/s]  [216MB/455.1MB][ 47%][=======================>                          ][4.909MB/s]  [232MB/455.1MB][ 50%][=========================>                        ][5.156MB/s]  [240MB/455.1MB][ 52%][==========================>                       ][5.217MB/s]  [248MB/455.1MB][ 54%][===========================>                      ][5.277MB/s]  [256MB/455.1MB][ 56%][============================>                     ][5.224MB/s]  [264MB/455.1MB][ 58%][=============================>                    ][5.28MB/s]  [272MB/455.1MB][ 59%][=============================>                    ][5.231MB/s]  [280MB/455.1MB][ 61%][==============================>                   ][5.185MB/s]  [288MB/455.1MB][ 63%][===============================>                  ][5.143MB/s]  [296MB/455.1MB][ 65%][================================>                 ][5.103MB/s]  [304MB/455.1MB][ 66%][=================================>                ][4.984MB/s]  [312MB/455.1MB][ 68%][==================================>               ][4.875MB/s]  [320MB/455.1MB][ 70%][===================================>              ][4.776MB/s]  [328MB/455.1MB][ 72%][====================================>             ][4.62MB/s]  [336MB/455.1MB][ 73%][====================================>             ][4.48MB/s]  [344MB/455.1MB][ 75%][=====================================>            ][4.354MB/s]  [352MB/455.1MB][ 77%][======================================>           ][4.241MB/s]  [360MB/455.1MB][ 79%][=======================================>          ][4.091MB/s]  [368MB/455.1MB][ 80%][========================================>         ][4.044MB/s]  [376MB/455.1MB][ 82%][=========================================>        ][4.043MB/s]  [384MB/455.1MB][ 84%][==========================================>       ][3.918MB/s]  [392MB/455.1MB][ 86%][===========================================>      ][3.769MB/s]  [400MB/455.1MB][ 87%][===========================================>      ][3.636MB/s]  [408MB/455.1MB][ 89%][============================================>     ][3.458MB/s]  [416MB/455.1MB][ 91%][=============================================>    ][3.382MB/s]  [424MB/455.1MB][ 93%][==============================================>   ][3.287MB/s]  [432MB/455.1MB][ 94%][===============================================>  ][3.248MB/s]  [440MB/455.1MB][ 96%][================================================> ][3.212MB/s]  [448MB/455.1MB][ 98%][=================================================>][3.133MB/s]  [455.1MB/455.1MB][100%][==================================================][3.096MB/s]  [455.1MB/455.1MB][100%][==================================================][3.096MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_115291/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_115291/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
